--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact section-bg">
+    <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
