--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -105,7 +107,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 807 337 2787</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dharwad, Karnataka</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7 March 1985</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7th March 1985</span></li>
                 </ul>
               </div>
               <div class="bd-example m-0 border-0">
@@ -272,7 +274,7 @@
   </div>
 </div>     
 <div class="progress">
-  <span class="skill">Continuous Learning and Adaptability</span>
+  <span class="skill">Continuous Learning & Adaptability</span>
   <div class="progress-bar-wrap">
     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
