--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 <div class="col-lg-4 email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>ravernekar@gmail.com</p>
+                  <p><a href="mailto:ravernekar@gmail.com">ravernekar@gmail.com</a></p>
                 </div>
   
                 <div class="col-lg-4 phone">
