--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <div class="col-lg-4 phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+91 807 337 2787</p>
+                  <p><a href="tel:+918073372787">+91 807 337 2787</a></p>
                 </div>
               </div>
 
