--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </ul>
               </div>
               <div class="bd-example m-0 border-0">
-                <a href="assets/Raghavendra-Vernekar-Resume.pdf" target="_blank" download="Raghavendra-Vernekar-Resume" type="button" class="btn btn-primary btn-lg">Download CV</a>
+                <a href="assets/Raghavendra-Vernekar-Resume.pdf" target="_blank" download="Raghavendra-Vernekar-CV" type="button" class="btn btn-primary btn-lg">Download CV</a>
           </div>
             </div>
           </div>
@@ -512,7 +512,7 @@
           <div class="col-lg-6 linkdin">
                 <i class="bx bx-food-menu" type='solid'></i>
                 <h4>Resume:</h4>
-                <p><a href="assets/Raghavendra-Vernekar-Resume.pdf" target="_blank" download="Raghavendra-Vernekar-Resume">Download CV</a></p>
+                <p><a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank" download="Raghavendra-Vernekar-Resume">Download CV</a></p>
           </div>
         </div>
         </div>
