--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.V.A (Bachelor of Visual Arts)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ravernekar.github.io/iportfolio/">www.ravernekar.github.io/iportfolio/</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ravernekar.github.io/raghavendravernekar/">www.ravernekar.github.io/raghavendravernekar/</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ravernekar@gmail.com</span></li>
                 </ul>
               </div>
@@ -111,7 +111,7 @@
                 </ul>
               </div>
               <div class="bd-example m-0 border-0">
-                <a href="assets/Raghavendra-Vernekar-Resume.pdf" target="_blank" download="Raghavendra-Vernekar-CV" type="button" class="btn btn-primary btn-lg">Download CV</a>
+                <a href="assets/Raghavendra-Vernekar-Resume.pdf" target="_blank" download="Raghavendra-Vernekar-CV" type="button" class="btn btn-primary btn-lg"> Download CV</a>
           </div>
             </div>
           </div>
@@ -120,32 +120,31 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= 
-    <section id="facts" class="facts">
-      <div class="container">
+<!-- ======= Facts Section ======= 
+  <section id="facts" class="facts">
+    <div class="container">
 
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+  <div class="section-title">
+    <h2>Facts</h2>
+    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+  </div>
 
-        <div class="row no-gutters">
+  <div class="row no-gutters">
+    <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+      <div class="count-box">
+        <i class="bi bi-emoji-smile"></i>
+        <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+        <p><strong>Happy Clients</strong> consequuntur quae</p>
+    </div>
+  </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div>
-          </div>
+  <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+    <div class="count-box">
+      <i class="bi bi-journal-richtext"></i>
+      <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+      <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+    </div>
+  </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
@@ -179,7 +178,7 @@
 
         <div class="row skills-content">
 <div class="col-lg-4" data-aos="fade-up">
-<h4 style="margin-bottom: 20px; color: #330099;">Proficiency in design tools:</h4>
+<h4 style="margin-bottom: 20px; color: #6610f2;">Proficiency in design tools:</h4>
 <div class="progress">
   <span class="skill">Adobe Photoshop CC</span>
   <div class="progress-bar-wrap">
@@ -233,7 +232,7 @@
 </div>
 
 <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-<h4 style="margin-bottom: 20px; color: #330099;">Understanding of UX/UI design:</h4>
+<h4 style="margin-bottom: 20px; color: #6610f2;">Understanding of UX/UI design:</h4>
 <div class="progress">
   <span class="skill">Design Thinking</span>
   <div class="progress-bar-wrap">
@@ -281,7 +280,7 @@
 </div>
           </div>
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-<h4 style="margin-bottom: 20px; color: #330099;">Knowledge of front-end development languages and frameworks:</h4>
+<h4 style="margin-bottom: 20px; color: #6610f2;">Knowledge of front-end development languages and frameworks:</h4>
             <div class="progress">
               <span class="skill">HTML 5</span>
               <div class="progress-bar-wrap">
