--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.V.A (Bachelor of Visual Arts)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ravernekar.github.io/raghavendravernekar/">www.ravernekar.github.io/raghavendravernekar/</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ravernekar.github.io/raghavendravernekar/">www.ravernekar.github.io/<br>raghavendravernekar/</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ravernekar@gmail.com</span></li>
                 </ul>
               </div>
@@ -436,12 +436,96 @@
 
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="assets/img/portfolio/dtep.jpg"></div>
-            <div class="swiper-slide"><img src="assets/img/portfolio/l3harris.jpg"></div>
-            <div class="swiper-slide"><img src="assets/img/portfolio/tanishq.jpg"></div>
-            <div class="swiper-slide"><img src="assets/img/portfolio/easyhotel.jpg"></div>
-            <div class="swiper-slide"><img src="assets/img/portfolio/dartcharge.jpg"></div>
-            <div class="swiper-slide"><img src="assets/img/portfolio/stage.jpg"></div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">DTEP</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">Dynamic test engineering platform</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/dtep.jpg"></div>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">L3Harris</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">Operation status dashboard is a web based Power BI Dashboard</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/l3harris.jpg"></div>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">Tanishq</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">New age POSS - Making sales system easy to use & quick</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/tanishq.jpg"></div>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">Easyhotel</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">The easyhotel application is a mobile app.</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/easyhotel.jpg"></div>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">Dart Charge</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">Dart Charge payments system</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/dartcharge.jpg"></div>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">STAGE</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">Stage is a big business Analytics tool</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/stage.jpg"></div>
+              </a>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -508,7 +592,7 @@
                 <h4>Linkedin:</h4>
                 <p><a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank">linkedin.com/in/raghavendra-vernekar-a5018727</a></p>
           </div>
-          <div class="col-lg-6 linkdin">
+          <div class="col-lg-6 cv">
                 <i class="bx bx-food-menu" type='solid'></i>
                 <h4>Resume:</h4>
                 <p><a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank" download="Raghavendra-Vernekar-Resume">Download CV</a></p>
@@ -584,12 +668,24 @@
   <script src="assets/js/main.js"></script>
     <script>
     var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 3,
+      slidesPerView: 1,
       spaceBetween: 30,
       pagination: {
         el: ".swiper-pagination",
         clickable: true,
       },
+
+      // Responsive breakpoints
+  breakpoints: {
+    640: {
+      slidesPerView: 1.25,
+      spaceBetween: 20
+    },
+    1024: {
+      slidesPerView: 3,
+      spaceBetween: 20
+    }
+  }
     });
   </script>
 </body>
