--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h2 style="font-weight: 400; color: aliceblue;"><img src="assets/img/hend.png" title alt> "Hello, I am"</h2>
       <h1>Raghavendra Vernekar</h1>
-      <p>I'm a Passionate <span class="typed" data-typed-items="Designer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Design Thinker, User Experience Specialist, Interface Architect, Creative Strategist, Visual Storyteller, Interaction Designer, Digital Artist, Product Designer, Visualiser"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -92,7 +92,6 @@
           <div class="about-intro col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h6>My Intro</h6>
             <h1>I am <span style="font-weight: 600;">Raghavendra Vernekar</span></h1>
-            <h5>UX/UI Designer</h5>
             <p>Art has always held a special place in my heart. From a young age, I was captivated by the power of design, the expressiveness of sketches, and the vibrancy of paintings. This deep fascination fueled my decision to pursue a Bachelor of Visual Arts (B.V.A.) degree, allowing me to dive deeper into the world of art and hone my creative skills.</p>
             <p>For more than 10 years now, design has been the central piece of my world. On this fast and mind-blowing journey, I have moved over the years from being a visual designer to a full-time UX/UI thinker and designer.</p>
             <div class="row">
