--- a/index.html
+++ b/index.html
@@ -577,61 +577,73 @@
       </div>
     </section> End Services Section -->
 
+<!-- Contact Section -->
+<section id="contact" class="contact section">
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p style="margin-bottom: 30px;">Thank you for visiting my website! Whether you have a question, want to discuss a potential project, or simply want to say hello, I'd love to hear from you. Please feel free to reach out using the contact form below or connect with me via email or social media.</p>
-        <div class="row">
-          <div class="col-lg-6 linkdin">
-                <i class="bx bxl-linkedin"></i>
-                <h4>Linkedin:</h4>
-                <p><a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank">linkedin.com/in/raghavendra-vernekar-a5018727</a></p>
-          </div>
-          <div class="col-lg-6 cv">
-                <i class="bx bx-food-menu" type='solid'></i>
-                <h4>Resume:</h4>
-                <p><a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank" download="Raghavendra-Vernekar-Resume">Download CV</a></p>
-          </div>
-        </div>
-        </div>
-
-        <div class="row" data-aos="fade-in">
-
-          <div class="col-lg-12 d-flex align-items-stretch">
-            <div class="info">
-              <div class="row">
-                <div class="col-lg-4 address">
-                  <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>Bengaluru, Karnataka</p>
-                </div>
-  
-                <div class="col-lg-4 email">
-                  <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p><a href="mailto:ravernekar@gmail.com">ravernekar@gmail.com</a></p>
-                </div>
-  
-                <div class="col-lg-4 phone">
-                  <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p><a href="tel:+918073372787">+91 807 337 2787</a></p>
-                </div>
-              </div>
-
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.84916296526!2d77.6309395!3d12.9539974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1711214984072!5m2!1sen!2sin" width="100%" height="290" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-
-          </div>
-
-        </div>
-
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Contact</h2>
+    <p class="mb-4">Thank you for visiting my website! Whether you have a question, want to discuss a potential project, or simply want to say hello, I'd love to hear from you. Please feel free to reach out using the contact form below or connect with me via email or social media.</p>
+    <div class="row">
+      <div class="col-lg-6 linkdin">
+            <i class="bx bxl-linkedin"></i>
+            <h4>Linkedin:</h4>
+            <p><a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank">linkedin.com/in/raghavendra-vernekar-a5018727</a></p>
       </div>
-    </section><!-- End Contact Section -->
+      <div class="col-lg-6 cv">
+            <i class="bx bx-food-menu" type='solid'></i>
+            <h4>Resume:</h4>
+            <p><a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank" download="Raghavendra-Vernekar-Resume">Download CV</a></p>
+      </div>
+    </div>  
+  </div><!-- End Section Title -->
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+    <div class="row gy-4">
+
+      <div class="col-lg-5">
+
+        <div class="info-wrap">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+            <i class="bi bi-geo-alt"></i>
+            <div>
+              <h3>Address</h3>
+              <p>Bengaluru, Karnataka</p>
+            </div>
+          </div><!-- End Info Item -->
+
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+            <i class="bi bi-envelope"></i>
+            <div>
+              <h3>Email ID</h3>
+              <p><a href="mailto:ravernekar@gmail.com">ravernekar@gmail.com</a></p>
+            </div>
+          </div><!-- End Info Item -->
+
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <i class="bi bi-phone"></i>
+            <div>
+              <h3>Call</h3>
+              <p><a href="tel:+918073372787">+91 807 337 2787</a></p>
+            </div>
+          </div><!-- End Info Item -->
+        </div>
+      </div>
+
+      <div class="col-lg-7">
+        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.84916296526!2d77.6309395!3d12.9539974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1711214984072!5m2!1sen!2sin" width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </form>
+      </div><!-- End Contact Form -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Contact Section -->
 
   </main><!-- End #main -->
 
