--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.V.A (Bachelor of Visual Arts)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.V.A (Bachelor of Visual Art)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ravernekar.github.io/raghavendravernekar/">www.ravernekar.github.io/<br>raghavendravernekar/</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ravernekar@gmail.com</span></li>
                 </ul>
@@ -270,43 +270,40 @@
   <div class="progress-bar-wrap">
     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
-</div>     
+</div>
 <div class="progress">
   <span class="skill">Continuous Learning & Adaptability</span>
   <div class="progress-bar-wrap">
     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div>
-          </div>
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+</div>
+<div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 <h4 style="margin-bottom: 20px; color: #6610f2;">Knowledge of front-end development languages and frameworks:</h4>
-            <div class="progress">
-              <span class="skill">HTML 5</span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+  <div class="progress">
+    <span class="skill">HTML 5</span>
+    <div class="progress-bar-wrap">
+      <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+  </div>
+<div class="progress">
+  <span class="skill">CSS 3</span>
+    <div class="progress-bar-wrap">
+     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+</div>
 
-            <div class="progress">
-              <span class="skill">CSS 3</span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+<div class="progress">
+  <span class="skill">Bootstrap</span>
+    <div class="progress-bar-wrap">
+      <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+</div>
 
-            <div class="progress">
-              <span class="skill">Bootstrap</span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
+</div>
+</div>
+</div>
+</section><!-- End Skills Section -->
 
 <!-- ======= Resume Section ======= -->
 <section id="experience" class="resume">
@@ -317,17 +314,17 @@
   <p>Passionate designer with 12 years of experience. A specialist in ideas & minimalist in design. Originally from Dharwad, I did my undergraduate studies in Bachelor of Visual Art, Davangere. Experienced in UX/UI Design, I love designing functional user experiences that are simple yet elegant.</p>
 </div>
 
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <!--div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div-->
+<div class="row">
+  <div class="col-lg-6" data-aos="fade-up">
+<!--div class="resume-item pb-0">
+<h4>Alex Smith</h4>
+<p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+<ul>
+  <li>Portland par 127,Orlando, FL</li>
+  <li>(123) 456-7891</li>
+  <li>alice.barkley@example.com</li>
+</ul>
+</div-->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -412,17 +409,17 @@
           </div>
         </div>
 
-      </div>
-    </section><!-- End Resume Section -->
+  </div>
+</section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
+<!-- ======= Portfolio Section ======= -->
+<section id="portfolio" class="portfolio section-bg">
+  <div class="container">
 
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Explore my portfolio to discover a collection of my most impactful design projects. Each piece reflects my dedication to creating intuitive and visually engaging user experiences. Dive in to see how I blend creativity and functionality in my work.</p>
-        </div>
+    <div class="section-title">
+      <h2>Portfolio</h2>
+      <p>Explore my portfolio to discover a collection of my most impactful design projects. Each piece reflects my dedication to creating intuitive and visually engaging user experiences. Dive in to see how I blend creativity and functionality in my work.</p>
+    </div>
         <div class="behance">
           <div class="row">
             <div class="col-lg-6 address">
@@ -640,7 +637,6 @@
       </div><!-- End Contact Form -->
 
     </div>
-
   </div>
 
 </section><!-- /Contact Section -->
@@ -690,11 +686,15 @@
   breakpoints: {
     640: {
       slidesPerView: 1.25,
-      spaceBetween: 20
+      spaceBetween: 20,
+      allowSlidePrev: true,
+      allowSlideNext: true
     },
     1024: {
       slidesPerView: 3,
-      spaceBetween: 20
+      spaceBetween: 20,
+      allowSlidePrev: true,
+      allowSlideNext: true
     }
   }
     });
