--- a/index.html
+++ b/index.html
@@ -680,6 +680,8 @@
       pagination: {
         el: ".swiper-pagination",
         clickable: true,
+        allowSlidePrev: true,
+      allowSlideNext: true
       },
 
       // Responsive breakpoints
