--- a/index.html
+++ b/index.html
@@ -686,12 +686,44 @@
 
       // Responsive breakpoints
   breakpoints: {
-    640: {
+    300: {
+          mousewheel: true,
+          keyboard: true,
+          slidesPerView: 1,
+          spaceBetween: 20,
+          allowSlidePrev: true,
+          allowSlideNext: true
+        },
+        400: {
+          slidesPerView: 1.25,
+          spaceBetween: 24,
+          allowSlidePrev: true,
+          allowSlideNext: true
+        },
+        640: {
       slidesPerView: 1.25,
       spaceBetween: 20,
       allowSlidePrev: true,
       allowSlideNext: true
     },
+        768: {
+          slidesPerView: 1.25,
+          spaceBetween: 20,
+          allowSlidePrev: true,
+          allowSlideNext: true
+        },
+        960: {
+          slidesPerView: 1.25,
+          spaceBetween: 20,
+          allowSlidePrev: true,
+          allowSlideNext: true
+        },
+        991: {
+          slidesPerView: 1.25,
+          spaceBetween: 20,
+          allowSlidePrev: false,
+          allowSlideNext: false
+        },
     1024: {
       slidesPerView: 3,
       spaceBetween: 20,
