--- a/index.html
+++ b/index.html
@@ -33,38 +33,38 @@
 
 <body>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+<!-- ======= Mobile nav toggle button ======= -->
+<i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
   <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
+<header id="header">
+  <div class="d-flex flex-column">
 
-      <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light text-center"><a href="index.html">Raghavendra Vernekar</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.behance.net/ravernekar92d3" target="_blank" class="facebook"><i class="bx bxl-behance"></i></a>
-          <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        </div>
+  <div class="profile">
+    <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+    <h1 class="text-light text-center"><a href="index.html">Raghavendra Vernekar</a></h1>
+      <div class="social-links mt-3 text-center">
+        <a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.behance.net/ravernekar92d3" target="_blank" class="facebook"><i class="bx bxl-behance"></i></a>
+        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
+  </div>
 
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-select-multiple"></i> <span>Skills</span></a></li>
-          <li><a href="#experience" class="nav-link scrollto"><i class="bx bx-book-open"></i> <span>Education & Experience</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <!--li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li-->
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
+    <nav id="navbar" class="nav-menu navbar">
+      <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-select-multiple"></i> <span>Skills</span></a></li>
+        <li><a href="#experience" class="nav-link scrollto"><i class="bx bx-book-open"></i> <span>Education & Experience</span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <!--li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li-->
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+  </div>
+</header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
@@ -77,9 +77,9 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
+<!-- ======= About Section ======= -->
+<section id="about" class="about">
+  <div class="container">
 
         <div class="section-title">
           <h2>About Me</h2>
@@ -93,7 +93,7 @@
             <h6>My Intro</h6>
             <h1>I am <span style="font-weight: 600;">Raghavendra Vernekar</span></h1>
             <p>Art has always held a special place in my heart. From a young age, I was captivated by the power of design, the expressiveness of sketches, and the vibrancy of paintings. This deep fascination fueled my decision to pursue a Bachelor of Visual Arts (B.V.A.) degree, allowing me to dive deeper into the world of art and hone my creative skills.</p>
-            <p>For more than 10 years now, design has been the central piece of my world. On this fast and mind-blowing journey, I have moved over the years from being a visual designer to a full-time UX/UI thinker and designer.</p>
+            <p>For more than 10 years now, design has been the central piece of my world. On this fast and mind-blowing journey, I have moved over the years from being a Web Designer to a full-time UX/UI thinker and designer.</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -326,24 +326,24 @@
 </ul>
 </div-->
 
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>BVA. DEGREE (BACHELOR OF VISUAL ART) IN APPLIED ART</h4>
-              <h5>2005 - 2009</h5>
-              <p><em>University College of Fine Art Kuvempu University, Shimoga</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>12th COMMERCE</h4>
-              <h5>2003 - 2004</h5>
-              <p><em>ST. Joseph’s Composite College of Science, Commerce & Arts, Dharwad</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>10th SSLC</h4>
-              <h5>1993 - 2002</h5>
-              <p><em>St. Joseph’s High School, Dharwad</em></p>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+<h3 class="resume-title">Education</h3>
+  <div class="resume-item">
+    <h4>BVA. DEGREE (BACHELOR OF VISUAL ART) IN APPLIED ART</h4>
+    <h5>2005 - 2009</h5>
+    <p><em>University College of Fine Art Kuvempu University, Shimoga</em></p>
+  </div>
+  <div class="resume-item">
+    <h4>12th COMMERCE</h4>
+    <h5>2003 - 2004</h5>
+    <p><em>ST. Joseph’s Composite College of Science, Commerce & Arts, Dharwad</em></p>
+  </div>
+  <div class="resume-item">
+    <h4>10th SSLC</h4>
+    <h5>1993 - 2002</h5>
+    <p><em>St. Joseph’s High School, Dharwad</em></p>
+  </div>
+</div>
+  <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Senior Technical Lead</h4>
@@ -420,15 +420,6 @@
       <h2>Portfolio</h2>
       <p>Explore my portfolio to discover a collection of my most impactful design projects. Each piece reflects my dedication to creating intuitive and visually engaging user experiences. Dive in to see how I blend creativity and functionality in my work.</p>
     </div>
-        <div class="behance">
-          <div class="row">
-            <div class="col-lg-6 address">
-              <i class="bx bxl-behance"></i>
-              <h4>Behance:</h4>
-              <p><a href="https://www.behance.net/ravernekar92d3" target="_blank">https://www.behance.net/ravernekar92d3</a></p>
-            </div>
-          </div>
-        </div>
 
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
@@ -529,50 +520,15 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section ======= 
-    <section id="services" class="services">
+    <!-- ======= Services Section =======  -->d
+    <section id="services" class="services dark">
       <div class="container">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-        </div>
-
+          <a href="https://www.behance.net/ravernekar92d3" target="_blank"><h2 class="be">Behance.</h2></a>
+          <a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank"><h2 class="li">Linkedin.</h2></a>
+          <a href="assets/Raghavendra-Vernekar-Resume.pdf" target="_blank"><h2 class="do">Download CV.</h2></a>
+       
       </div>
-    </section> End Services Section -->
+    </section><!-- End Services Section -->
 
 <!-- Contact Section -->
 <section id="contact" class="contact section">
@@ -581,25 +537,12 @@
   <div class="container section-title" data-aos="fade-up">
     <h2>Contact</h2>
     <p class="mb-4">Thank you for visiting my website! Whether you have a question, want to discuss a potential project, or simply want to say hello, I'd love to hear from you. Please feel free to reach out using the contact form below or connect with me via email or social media.</p>
-    <div class="row">
-      <div class="col-lg-6 linkdin">
-            <i class="bx bxl-linkedin"></i>
-            <h4>Linkedin:</h4>
-            <p><a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank">linkedin.com/in/raghavendra-vernekar-a5018727</a></p>
-      </div>
-      <div class="col-lg-6 cv">
-            <i class="bx bx-food-menu" type='solid'></i>
-            <h4>Resume:</h4>
-            <p><a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank" download="Raghavendra-Vernekar-Resume">Download CV</a></p>
-      </div>
-    </div>  
   </div><!-- End Section Title -->
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+<div class="container" data-aos="fade-up" data-aos-delay="100">
 
-    <div class="row gy-4">
-
-      <div class="col-lg-5">
+<div class="row gy-4">
+  <div class="col-lg-5">
 
         <div class="info-wrap">
           <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
@@ -695,31 +638,31 @@
           allowSlideNext: true
         },
         400: {
-          slidesPerView: 1.25,
+          slidesPerView: 1,
           spaceBetween: 24,
           allowSlidePrev: true,
           allowSlideNext: true
         },
         640: {
-      slidesPerView: 1.25,
+      slidesPerView: 1,
       spaceBetween: 20,
       allowSlidePrev: true,
       allowSlideNext: true
     },
         768: {
-          slidesPerView: 1.25,
+          slidesPerView: 1,
           spaceBetween: 20,
           allowSlidePrev: true,
           allowSlideNext: true
         },
         960: {
-          slidesPerView: 1.25,
+          slidesPerView: 3,
           spaceBetween: 20,
           allowSlidePrev: true,
           allowSlideNext: true
         },
         991: {
-          slidesPerView: 1.25,
+          slidesPerView: 3,
           spaceBetween: 20,
           allowSlidePrev: false,
           allowSlideNext: false
