--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section =======  -->d
+    <!-- ======= Services Section =======  -->
     <section id="services" class="services dark">
       <div class="container">
           <a href="https://www.behance.net/ravernekar92d3" target="_blank"><h2 class="be">Behance.</h2></a>
