--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="about-intro col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h6>My Intro</h6>
             <h1>I am <span style="font-weight: 600;">Raghavendra Vernekar</span></h1>
-            <p>Art has always held a special place in my heart. From a young age, I was captivated by the power of design, the expressiveness of sketches, and the vibrancy of paintings. This deep fascination fueled my decision to pursue a Bachelor of Visual Arts (B.V.A.) degree, allowing me to dive deeper into the world of art and hone my creative skills.</p>
+            <p>Art has always held a special place in my heart. From a young age, I was captivated by the power of design, the expressiveness of sketches, and the vibrancy of paintings. This deep fascination fueled my decision to pursue a Bachelor of Visual Art (B.V.A.) degree, allowing me to dive deeper into the world of art and hone my creative skills.</p>
             <p>For more than 10 years now, design has been the central piece of my world. On this fast and mind-blowing journey, I have moved over the years from being a Web Designer to a full-time UX/UI thinker and designer.</p>
             <div class="row">
               <div class="col-lg-6">
