--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.V.A (Bachelor of Visual Art)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://raghavendravernekar.vercel.app/">https://raghavendravernekar.vercel.app/</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://raghavendravernekar.vercel.app/">https://raghavendravernekar.vercel.app</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ravernekar@gmail.com</span></li>
                 </ul>
               </div>
@@ -525,7 +525,7 @@
       <div class="container">
           <a href="https://www.behance.net/ravernekar92d3" target="_blank"><h2 class="be">Behance.</h2></a>
           <a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank"><h2 class="li">Linkedin.</h2></a>
-          <a href="assets/Raghavendra-Vernekar-CV.pdf"><h2 class="do">Resume.</h2></a>
+          <a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank"><h2 class="do">Resume.</h2></a>
       </div>
     </section><!-- End Services Section -->
 
