--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Contact</h2>
-    <p class="mb-4">Thank you for visiting my website! Whether you have a question, want to discuss a potential project, or simply want to say hello, I'd love to hear from you. Please feel free to reach out using the contact form below or connect with me via email or social media.</p>
+    <p class="mb-4">Thank you for visiting my website! I’m always excited to connect. Whether you have a question, want to discuss a potential project, or just want to say hello, I’d love to hear from you. Please feel free to reach out via phone, email, or social media.</p>
   </div><!-- End Section Title -->
 
 <div class="container" data-aos="fade-up" data-aos-delay="100">
