--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 <h3 class="resume-title">Education</h3>
   <div class="resume-item">
-    <h4>BVA. DEGREE (BACHELOR OF VISUAL ART) IN APPLIED ART</h4>
+    <h4>B.V.A. DEGREE (BACHELOR OF VISUAL ART) IN APPLIED ART</h4>
     <h5>2005 - 2009</h5>
     <p><em>University College of Fine Art Kuvempu University, Shimoga</em></p>
   </div>
@@ -511,6 +511,21 @@
                   </div>
                 </div>
                 <div class="card-img"><img src="assets/img/portfolio/stage.jpg"></div>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="card-portfolio position-relative d-block rounded-3 overflow-hidden">
+                <span class="position-absolute top-0 start-0 w-100 h-100 zindex-1" style="background: linear-gradient(180deg, rgba(17, 24, 39, 0.00) 35.56%, #111827 95.3%);"></span>
+                <div class="position-absolute bottom-0 w-100 zindex-2 p-4">
+                  <div class="px-md-3">
+                    <h3 class="h4 text-white mb-0">MIST</h3>
+                    <div class="card-portfolio-meta d-flex align-items-center justify-content-between">
+                      <span class="text-white fs-xs text-truncate pe-3">Scriptless testing application</span>
+                      <i class="bx bx-right-arrow-circle fs-3 text-gradient-primary"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-img"><img src="assets/img/portfolio/mist.jpg"></div>
               </a>
             </div>
           </div>
