--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
       <div class="container">
           <a href="https://www.behance.net/ravernekar92d3" target="_blank"><h2 class="be">Behance.</h2></a>
           <a href="https://www.linkedin.com/in/raghavendra-vernekar-a5018727/" target="_blank"><h2 class="li">Linkedin.</h2></a>
-          <a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank"><h2 class="do">Resume.</h2></a>
+          <a href="assets/Raghavendra-Vernekar-CV.pdf" target="_blank" download="Raghavendra-Vernekar-CV" type="button"><h2 class="do">Resume.</h2></a>
       </div>
     </section><!-- End Services Section -->
 
