--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <div class="resume-item">
               <h4>Web Designer</h4>
               <h5>Jul 2012 - 2014</h5>
-              <p><em>Capillary Technologies, Banglore, India</em></p>
+              <p><em>Capillary Technologies, Bengaluru, India</em></p>
               <ul>
                 <li>Managed design projects from concept to delivery, ensuring timely completion and adherence to project requirements and deadlines.</li>
                 <li>Prioritized tasks, managed resources effectively, and communicated project status updates to the team.</li>
