--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 807 337 2787</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dharwad, Karnataka</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bengaluru (Dharwad), Karnataka</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7th March 1985</span></li>
                 </ul>
               </div>
